--- a/examples/index.html
+++ b/examples/index.html
@@ -7,7 +7,9 @@
 
     <link rel="stylesheet" type="text/css" href="" />
 
-    <script type="text/javascript" defer src="http://at.alicdn.com/t/font_kl28lj2p5d7eewmi.js"></script>
+    <!--<script type="text/javascript" defer src="http://at.alicdn.com/t/font_kl28lj2p5d7eewmi.js"></script>-->
+
+    <script type="text/javascript" defer src="../assets/iconfont.js"></script>
 </head>
 <body>
     <div style="margin-bottom: 200px;">
