--- a/examples/index.html
+++ b/examples/index.html
@@ -1,39 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh-cn">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>title</title>
-
-    <link rel="stylesheet" type="text/css" href="" />
-
-    <!--<script type="text/javascript" defer src="http://at.alicdn.com/t/font_kl28lj2p5d7eewmi.js"></script>-->
-
-    <script type="text/javascript" defer src="../assets/iconfont.js"></script>
-</head>
-<body>
-    <div style="margin-bottom: 200px;">
-        这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容
-        <br />
-        这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容
-        <br />
-        这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容
-        <br />这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容
-        <br />这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容
-        <br />这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容
-        <br />
-        这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容
-        <br />
-        这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容
-        <br />
-        这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容
-        <br />
-    </div>
-
-    <div id="root">
-
-    </div>
-
-    <script type="text/javascript" src="./main.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang="zh-cn"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><title>title</title><link rel="stylesheet" type="text/css" href=""><!--<script type="text/javascript" defer src="http://at.alicdn.com/t/font_kl28lj2p5d7eewmi.js"></script>--><script type="text/javascript" defer="defer" src="../../assets/iconfont.js"></script><link rel="shortcut icon" href="/favicon.ico"></head><body><div style="margin-bottom: 200px">这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容<br>这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容<br>这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容<br>这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容<br>这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容<br>这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容<br>这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容<br>这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容<br>这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容这是用户自己网站的内容<br></div><div id="root"></div><script type="text/javascript" src="/vendor.aefbb7f6d109c5ae0c27.js"></script><script type="text/javascript" src="/app.6c8ef7d69cc8320d5209.js"></script></body></html>
