--- a/examples/src/index.html
+++ b/examples/src/index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>title</title>
-
-    <link rel="stylesheet" type="text/css" href="" />
+    <title>React-QuietWater-demo</title>
 
     <!--<script type="text/javascript" defer src="http://at.alicdn.com/t/font_kl28lj2p5d7eewmi.js"></script>-->
 
-    <script type="text/javascript" defer src="../assets/iconfont.js"></script>
+    <script type="text/javascript" defer src="../../assets/iconfont.js"></script>
 </head>
 <body>
     <div style="margin-bottom: 200px;">
